5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1638_87.log
== TEST (2019-04-10 12:33:55) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(a>b<c):
	print(b)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:34:13) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(a>b<c):
	print(b)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:34:31) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(a>b<c):
	print(b)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:34:56) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(a>b<c):
	print(b)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:35:33) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(a>b<c):
	print(b)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:44:38) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

x = a>b
y = b>c
z = c>a

print(x)
print(y)
print(z)
-- OUTPUT:
False
True
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:45:50) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

x = a>b
y = b>c
z = c>a

print(x)
print(y)
print(z)
-- OUTPUT:
False
True
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:48:55) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))
          #true true false,
x = a>b
y = b>c
z = c>a

print(x)
print(y)
print(z)
-- OUTPUT:
False
True
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:51:10) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))
          #true true false,
x = a>b
y = b>c
z = c>a

print(x)
print(y)
print(z)
-- OUTPUT:
False
True
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:51:55) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))
          #true true false,false false true,
x = a>b
y = b>c
z = c>a

print(x)
print(y)
print(z)
-- OUTPUT:
False
True
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:55:30) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

x = a<(b<c)

print(x)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:56:11) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

x = a<b<c

print(x)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:00:57) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
else if(b>c>a):
	print(a)
else:
	print(c)


-- ERROR:
File "XXXX", line 7
    else if(b>c>a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:05:01) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(b>c>a):
	print(a)
else:
	print(c)


-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:05:47) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if else (b>c>a):
	print(a)
else:
	print(c)


-- ERROR:
File "XXXX", line 7
    if else (b>c>a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:06:43) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(b>c>a):
	print(a)
else:
	print(c)


-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:07:16) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(b>c>a):
	print(a)
else:
	print(b)


-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:08:25) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
if(b>c>a):
	print(a)
else:
	print(b)


-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:11:18) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(c)
elif(b>c>a):
	print(a)
else:
	print(b)


-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:21:07) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	elif(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	elif(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	elif(a>b):
		print(b)
	else:
		print(a)
-- ERROR:
File "XXXX", line 6
    elif(b>c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:21:12) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	elif(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	elif(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	elif(a>b):
		print(b)
	else:
		print(a)
-- ERROR:
File "XXXX", line 6
    elif(b>c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:21:57) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	elif(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	elif(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	elif(a>b):
		print(b)
	else:
		print(a)
-- ERROR:
File "XXXX", line 6
    elif(b>c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:24:52) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	if(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	if(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	if(a>b):
		print(b)
	else:
		print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:25:11) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	if(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	if(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	if(a>b):
		print(b)
	else:
		print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:25:19) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	if(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	if(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	if(a>b):
		print(b)
	else:
		print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:25:39) 
-- CODE:
a = int(input("numero qualquer:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b):
	if(b>c):
		print(c)
	else:
		print(b)
elif(b>a):
	if(a>c):
		print(c)
	else:
		print(a)
elif(c>a):
	if(a>b):
		print(b)
	else:
		print(a)
-- EXECUTION TIME:
0.125408
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
